--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "6.0.2",
+    "@storybook/addon-knobs": "6.0.2",
+    "@storybook/addon-links": "6.0.2",
+    "@storybook/addons": "6.0.2",
+    "@storybook/react": "6.0.2",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.8",
     "@types/jest": "^26.0.9",
