--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint-staged": "^10.5.1",
     "plop": "^2.7.4",
     "prettier": "^2.2.0",
+    "storybook-addon-next-router": "^2.0.0",
     "typescript": "^4.1.2"
   }
 }
