--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
@@ -31,31 +32,31 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-typescript": "^7.14.5",
-    "@storybook/addon-essentials": "6.3.0",
-    "@storybook/react": "6.3.0",
+    "@storybook/addon-essentials": "6.3.2",
+    "@storybook/react": "6.3.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
+    "@types/node": "^15.14.0",
+    "@types/react": "^17.0.13",
     "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-styled-components": "^1.13.1",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "jest": "^27.0.5",
+    "jest": "^27.0.6",
     "jest-styled-components": "^7.0.4",
     "lint-staged": "^11.0.0",
     "plop": "^2.7.4",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "storybook-addon-next-router": "^2.0.4",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.5",
+    "husky": "^7.0.0"
   }
 }
