--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "next": "11.0.1",
-    "next-pwa": "^5.2.21",
+    "next-pwa": "^5.2.23",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.3.0"
@@ -32,31 +32,31 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-typescript": "^7.14.5",
-    "@storybook/addon-essentials": "6.3.2",
-    "@storybook/react": "6.3.2",
+    "@storybook/addon-essentials": "6.3.4",
+    "@storybook/react": "6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.14.0",
-    "@types/react": "^17.0.13",
-    "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.13.1",
-    "eslint": "^7.29.0",
+    "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
-    "jest-styled-components": "^7.0.4",
-    "lint-staged": "^11.0.0",
+    "jest-styled-components": "^7.0.5",
+    "lint-staged": "^11.0.1",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
-    "storybook-addon-next-router": "^2.0.4",
-    "typescript": "^4.3.5",
-    "husky": "^7.0.0"
+    "storybook-addon-next-router": "^3.0.5",
+    "typescript": "^4.3.5"
   }
 }
