--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "devDependencies": {
     "@storybook/addon-essentials": "6.3.10",
     "@storybook/react": "6.3.10",
+    "@swc/core": "^1.2.105",
+    "@swc/jest": "^0.2.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
