--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint src --max-warnings=0",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
-    "test:ci": "jest --runInBand",
     "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -23,39 +22,40 @@
     ]
   },
   "dependencies": {
-    "next": "12.0.10",
-    "next-pwa": "^5.3.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
+    "next": "12.1.6",
+    "next-pwa": "^5.5.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "6.4.17",
-    "@storybook/builder-webpack5": "^6.4.17",
-    "@storybook/manager-webpack5": "^6.4.17",
-    "@storybook/react": "6.4.17",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.27",
-    "@types/styled-components": "^5.1.21",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "eslint": "^8.8.0",
-    "eslint-config-next": "^12.0.10",
-    "eslint-config-prettier": "^8.3.0",
+    "@storybook/addon-essentials": "6.5.8",
+    "@storybook/builder-webpack5": "^6.5.8",
+    "@storybook/manager-webpack5": "^6.5.8",
+    "@storybook/react": "6.5.8",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
-    "jest": "^27.4.7",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "^7.0.5",
     "lint-staged": "^12.3.3",
     "plop": "^3.0.5",
     "prettier": "^2.4.1",
-    "storybook-addon-next-router": "^3.0.8",
-    "typescript": "^4.5.5",
+    "storybook-addon-next-router": "^4.0.0",
+    "typescript": "^4.7.3",
     "webpack": "5.68.0"
   }
 }
