chore: finish update fixes

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix",
-      "yarn test --findRelatedTests --bail"
+      "yarn lint --fix"
     ]
   },
   "dependencies": {
@@ -51,11 +50,11 @@
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "^7.0.5",
-    "lint-staged": "^12.3.3",
-    "plop": "^3.0.5",
-    "prettier": "^2.4.1",
+    "lint-staged": "^13.0.1",
+    "plop": "^3.1.0",
+    "prettier": "^2.6.2",
     "storybook-addon-next-router": "^4.0.0",
     "typescript": "^4.7.3",
-    "webpack": "5.68.0"
+    "webpack": "5.73.0"
   }
 }
